--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@radix-ui/themes": "^3.2.0",
     "classnames": "^2.5.1",
     "next": "15.1.7",
     "prisma": "^6.4.1",
