docker now works and runs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
-
-services:  
+services:
   db:
     image: mysql:8.0.36
     container_name: track_it_db
@@ -27,7 +26,7 @@ services:
       - NODE_ENV=development
       - DATABASE_URL=mysql://root:root@db:3306/track_it
 
-    command: sh -c "npx prisma generate && npx prisma migrate dev && npm start"
-
+    command: sh -c "npx prisma generate && npx prisma migrate dev --name init && npm run dev"
+  # deploy && npm run build
 volumes:
   track_it:
