--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - NODE_ENV=development
       - DATABASE_URL=mysql://root:root@db:3306/track_it
 
-    command: sh -c "npx prisma generate && npx prisma migrate dev --name init && npm run dev"
+    command: sh -c "npx prisma generate && npx prisma migrate dev --name init && npm run start"
   # deploy && npm run build
 volumes:
   track_it:
